refactored nav-filters css animations on mobile hide/show. removed wrapper parent div css, replaced by sibling div to blur beerlist on background when filters are opened. Messed something with type list filter needs to repair later.Lesson of the day : ONLY USE TRANSFORM & OPACITY FOR ANIMATIONS.

--- a/src/Stylesheets/filters.css
+++ b/src/Stylesheets/filters.css
@@ -33,38 +33,36 @@
   height: 100vh;
 }
 
-.nav-filter-wrapper {
-  position: -webkit-sticky;
+.nav-filter-background {
+  /* position: -webkit-sticky;
   position: sticky;
   top: 0px;
   height: 100vh;
   background-color: transparent;
   transition: left 0.5s ease-in-out;
+  will-change: left; */
 }
 
 .nav-filters {
   position: -webkit-sticky;
   position: sticky;
-  top: 0px;
+  top: 0;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   overflow: scroll;
-  height: calc(100vh - 24px);
-  width: 256px;
   padding: 0 2px;
   border-right: solid 1px #114a74;
-  transition: left 0.8s ease-in-out;
   background-color: #f0f0c9;
+  height: calc(100vh - 24px);
+  width: 256px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .nav-filters-hidden {
-  width: 50px;
-  left: -200px;
-  top: 50px;
-  z-index: 10;
-  margin: 50px 0;
-  transition: left 1.2s ease-in-out;
+  transform: translateX(-500px);
+  box-shadow: 0px 0px 0px 0px;
 }
 
 /* .filters-list {
@@ -89,13 +87,11 @@
 .filter {
   margin: 10px 5px;
   justify-content: flex-start;
-  transition: opacity 2s ease-in-out;
+  /* transition: opacity 1s ease-in-out; */
 }
 
 .filter-hidden {
-  display: none;
-  opacity: 0;
-  transition: opacity 2s ease-in-out;
+  /* opacity: 0; */
 }
 
 .filter ul {
@@ -115,6 +111,7 @@
   border: 1px solid #bd632f;
   border-width: 0 0 1px 0;
 }
+
 .option-title h3 {
   text-align: start;
   font: 700 14px/50px;
@@ -134,6 +131,7 @@
   box-sizing: border-box;
   transition: all 150ms ease-in-out;
 }
+
 .opened h3::before {
   transform: rotate(45deg);
 }
@@ -166,10 +164,13 @@
   border-color: #bd632f94;
   margin-bottom: -1px;
   animation: growDown 150ms ease-in-out forwards;
+  will-change: transform;
 }
 
 .filter-option-hidden {
-  display: none;
+  /* display: none; */
+  padding: 0;
+  margin: 0;
   height: 0;
   opacity: 0;
   position: top;
@@ -187,14 +188,6 @@
     transform: scaleY(1);
   }
 }
-
-/* .hidden .filter-option {
-  height: 0px;
-  line-height: 0px;
-  display: none;
-  opacity: 0;
-  transition: height 3s ease-in;
-} */
 
 .filter-option input,
 .filter-option label {
