--- a/src/Stylesheets/media-queries.css
+++ b/src/Stylesheets/media-queries.css
@@ -43,41 +43,30 @@
   /* ----------- FILTERS  ----------- */
   /* -------------------------------------------------------- */
 
-  .nav-filter-wrapper {
-    overflow: visible;
+  .nav-filter-background {
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: start;
-    left: 0;
     top: 130px;
-    height: calc(100% - 24px);
-    z-index: 10;
-    width: 100vw;
-    background-color: #aaaa9854;
+    z-index: 9;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+
+  .nav-filter-background-hidden {
+    z-index: -1;
   }
 
   .nav-filters {
-    position: -webkit-sticky;
-    position: sticky;
-    z-index: 10;
-    top: 0;
-    height: 100%;
-    border-radius: 0px 5px 5px 0px;
-    box-shadow: -1px -1px 5px #00000038, 0px 3px 2px #00000038,
-      6px -6px 8px 3px #f0f0c9b2;
-    border: solid 0px #114a74;
-    background-color: #f0f0c9;
-  }
-
-  .nav-filters-hidden {
-    transition: left 0.1s ease-in-out;
     position: absolute;
-    left: -200px;
+    top: 130px;
+    left: 0;
     z-index: 10;
-    margin: 50px 0;
-    background-color: #f0f0c9d7;
+    margin: 0;
+    height: calc(100% - 24px);
+    border-radius: 0px 5px 5px 0px;
+    box-shadow: 20px 40px 80px #000000, 6px -6px 8px 3px #f0f0c9dc;
+    border: solid 0px #114a74;
   }
 
   /* ----------- BEER  ----------- */
